--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=VB41wo8NfRFShsFl0HhZpqc0FT7oG-Ep
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 server.port=8080
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
+loggin.
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=false
